# bma_python

./: .gitignore  GITIGNORE_GUIDE.md  README.md  activate.sh  check_binary.py  guidelines.txt  pom.xml  proposta_page.html  requirements.txt
bma_consulta_sacado/: AssertivaSwagger.json  README.md  config.py  example_usage.py  oauth_client.py
bma_send_whatsapp/: APR_MONITOR_README.md  BINARY_BUILD_GUIDE.md  BUILD_INSTRUCTIONS.md  BUILD_SUMMARY.md  CEDENTE_GRUPO_EXTRACTION.md  DEPLOYMENT_SUMMARY.md  DEPLOYMENT_SUMMARY_WITH_LOGGING.md  FINAL_UPDATE_SUMMARY.md  GET_CHATS_SYNC_DEPLOYMENT.md  MESSAGE_LOGGING_README.md  README.md  README_QUERY_APR_CAPA_STATUS.md  README_SYNC.md  SYNC_EXECUTION_REPORT.md  UNIQUE_NAME_CONSTRAINT_README.md  activate.sh  apr_monitor_main.py  build_apr_monitor.sh  build_get_chats_sync.sh  build_query_apr_capa_status.sh  config.py  example_usage.py  examples.py  get_chats.py  get_chats_sync.py  message_logger.py  query_apr_capa_status.py  query_apr_capa_status_standalone.py  requirements.txt  requirements_binary.txt  send_whatsapp.py  setup.py  test_duplicate_detection.py  test_duplicate_prevention.py  test_extraction.py  test_message_logging.py  verify_deployment.sh  whatsapp_config.json  whatsapp_sender.py  zapi_config.json
cadastro_sacado/: api_vadu_config.json  check_sacado_registers.py  databases_config.json  deploy.sh  deploy_config.json  fetch_sacado_enrichment.py  models.py  models_mssql.py  pyproject.toml  run_enrichment_loop.sh  run_sync_loop.sh  sync_enriched_to_mssql.py
database/: BMA_MODELS_GUIDE.md  DIAS_UTEIS_README.md  README.md  (+9 more)
(+221 files in other folders)
