[project]
name = "cadastro-sacado"
version = "1.0.0"
description = "Cadastro de Sacados - Database connector for MariaDB and MSSQL"
requires-python = ">=3.10"
dependencies = [
    "mysql-connector-python>=9.0.0",
    "pymssql>=2.3.0",
    "sqlalchemy>=2.0.0",
    "pyinstaller>=6.0.0",
    "requests>=2.32.5",
]

[project.scripts]
db-connector = "db_connector:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.sdist]
include = ["*.py", "*.json"]

